--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 *.pyc
 __pycache__
 db.sqlite3
+static/
+media/
+local_settings.py
 
 # Backup files #
 *.bak
@@ -128,7 +131,7 @@ Control.system-ca-bundle
 GitHub.sublime-settings
 
 # Visual Studio Code #
-.vscode/*
+.vscode/
 .vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
